Fixed vertical align issues

--- a/res/css/styles.css
+++ b/res/css/styles.css
@@ -4,6 +4,11 @@
     min-height: 40vh;
 }
 
+.center-all {
+  height: 100%;
+  margin: auto;
+}
+
 #profile {
   margin: 0 !important;
   text-align: center;
